--- a/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
+++ b/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
@@ -45,7 +45,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def n_business_day_before(test_date, n):\n",
+    "    '''\n",
+    "    This function is a helper function trying to calculate the date that n business day before the input date\n",
+    "    '''\n",
+    "    last_day = test_date\n",
+    "    for _ in range(n):\n",
+    "        last_day = last_day - ONE_DAY\n",
+    "        while last_day.weekday() in holidays.WEEKEND or last_day in HOLIDAYS_US:\n",
+    "            last_day -= ONE_DAY\n",
+    "    return last_day \n",
+    "\n",
+    "def data_preparation(ticker_name, test_date):\n",
+    "    start_date = n_business_day_before(test_date, 249)\n",
+    "    price_df = data.DataReader(ticker_name, 'yahoo', start_date, end_date)\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
