--- a/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
+++ b/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
@@ -185,6 +185,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### plot auto correlation function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -201,7 +208,6 @@
     }
    ],
    "source": [
-    "# 自相关和偏相关图，默认阶数为31阶\n",
     "def draw_acf_pacf(ts, lags=31):\n",
     "    sns.set_context('notebook', font_scale=3.0)\n",
     "    f = plt.figure(facecolor='white', figsize=(40,15))\n",
@@ -214,6 +220,13 @@
     "    \n",
     "draw_acf_pacf(AMZN_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
