--- a/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
+++ b/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "3. Download retail sales data for the last 10 years.  Remove the seasonality of the data.  After that try to remove inflation but using log of sales vs time in a linear regression.\n",
     "\n",
-    "3. Stoffer Problem 1.7 : \n",
+    "4. Stoffer Problem 1.7 : \n",
     "\n",
     "    For a moving average process of the form\n",
     "\n",
@@ -25,7 +25,7 @@
     "\n",
     "    find the autocorrelatin and autocovariance function\n",
     "\n",
-    "4. Assume $Z_t$ are iid normal with mean 0 and standard deviation sigma\n",
+    "5. Assume $Z_t$ are iid normal with mean 0 and standard deviation sigma\n",
     "\n",
     "    which of the following are stationary\n",
     "\n",
@@ -618,6 +618,60 @@
     "    plt.show()\n",
     "    \n",
     "detrend_log_sales(y_true, y_trend, x_date, 'detrend log sales using linear regression')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 4. Stoffer Problem 1.7 : \n",
+    "\n",
+    "For a moving average process of the form\n",
+    "\n",
+    "$$X_t = W_{t-1} + 2W_t + W_{t+1}$$\n",
+    "\n",
+    "find the autocorrelatin and autocovariance function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution：\n",
+    "$$\\gamma(t,t) = \\mathbb{E}(W_{t-1} + 2W_t + W_{t+1})^2 = \\mathbb{E}W^2_{t-1} + 4\\mathbb{E}W^2_t +\\mathbb{E}W^2_{t+1}=6\\sigma^2_w$$\n",
+    "$$\\gamma(t,t+1) = \\mathbb{E}(W_{t-1} + 2W_t + W_{t+1})(W_t + 2W_{t+1} + W_{t+2}) = 2\\mathbb{E}W^2_t + 2\\mathbb{E}W^2_{t+1}=4\\sigma^2_w$$\n",
+    "$$\\gamma(t,t+2) = \\mathbb{E}(W_{t-1} + 2W_t + W_{t+1})(W_{t+1} + 2W_{t+2} + W_{t+3}) = \\mathbb{E}W^2_{t+1}=\\sigma^2_w$$\n",
+    "\n",
+    "And for $h \\geq 3$, \n",
+    "$$\\gamma(t,t+h) = 0$$\n",
+    "By symmetry, $\\gamma(t,t-h) = \\gamma(t,t+h)$.\n",
+    "\n",
+    "For autocorrelation function, we have $\\gamma(t,t) = 6\\sigma^2_w$ for all $t$, and $\\rho(h) = \\frac{\\gamma(t,t+h)}{\\gamma(t,t)}$, so\n",
+    "\n",
+    "$\\rho(0)=1$, $\\rho(1)=\\frac{2}{3}$, $\\rho(2)=\\frac{1}{6}$, and  $\\rho(h)=0$ for $h\\geq 3$.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 5. \n",
+    "Assume $Z_t$ are iid normal with mean 0 and standard deviation sigma\n",
+    "\n",
+    "which of the following are stationary\n",
+    "\n",
+    "$$X_t = a + bZ_t + cZ_{t-1}$$ \n",
+    "\n",
+    "$$X_t = Z_1 cos(ct) + Z_2 sin(ct)$$\n",
+    "\n",
+    "$$X_t = Z_0 cos(ct)$$\n",
+    "\n",
+    "$$X_t = Z_tZ_{t-1}$$\n",
+    "\n",
+    "$$X_t = a + bZ_t + ct$$"
    ]
   },
   {
