--- a/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
+++ b/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
@@ -675,6 +675,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### $X_t = a + bZ_t + cZ_{t-1}$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### $X_t = Z_1 cos(ct) + Z_2 sin(ct)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### $X_t = Z_0 cos(ct)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### $X_t = Z_tZ_{t-1}$\n",
+    "\n",
+    "We have \n",
+    "$$\\mathbb{E}[X_{t}]=\\mathbb{E}[ Z_{t}Z_{t-1}]=0$$\n",
+    "Hence, the mean does not depend on $t$. Also \n",
+    "\n",
+    "$$\\gamma(t,t + h) = \\mathbb{E}[X_tX_{t+h}] = \\mathbb{E}[Z_tZ_{t−1}Z_{t+h}Z_{t+h−1}]$$\n",
+    "For $h=0$, $\\gamma(t,t) = \\mathbb{E}(Z_{t}^2)\\mathbb{E}(Z_{t-1}^2) = \\sigma^4$. For $h\\geq 1$, $\\gamma(t,t+h) = 0$. THereofre, the Autocovariance function does not depend on $t$ So $X_t$ is stationary.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### $X_t = a + bZ_t + ct$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
