--- a/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
+++ b/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
@@ -678,29 +678,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $X_t = a + bZ_t + cZ_{t-1}$\n",
-    "\n"
+    "#### 1. $X_t = a + bZ_t + cZ_{t-1}$\n",
+    "\n",
+    "**Solution:**\n",
+    "\n",
+    "We have $\\mathbb{E}[X_{t}]=\\mathbb{E}[a + bZ_{t} + cZ_{t-1}]=a$. Hence, mean does not depend on $t$. \n",
+    "\n",
+    "For $h=0$, \n",
+    "$$\n",
+    "\\gamma(0)=E[(X_{t}-a)^{2}]=E[(bZ_{t} + cZ_{t-1})^{2}]=E[b^{2}Z_{t}^{2}+c^{2}Z_{t-1}^{2}+2bcZ_{t}Z_{t-1}]=(b^{2}+c^{2})\\sigma^{2}\n",
+    "$$\n",
+    "\n",
+    "For $h=1$,\n",
+    "$$\n",
+    "\\gamma(1)=E[(X_{t}-a)(X_{t+1}-a)]=E[(bZ_{t} + cZ_{t-1})(bZ_{t+1} + cZ_{t})]=E[bcZ_{t}^{2}]=bc\\sigma^{2}\n",
+    "$$\n",
+    "\n",
+    "For $h\\geq 2$, \n",
+    "$$\n",
+    "\\gamma(h)E[(X_{t}-a)(X_{t+h}-a)]=E[(bZ_{t} + cZ_{t-1})(bZ_{t+h} + cZ_{t+h-1})]=0\n",
+    "$$\n",
+    "\n",
+    "So autocovarinace does not depend on $t$ also. Hence, $X_t$ is stationary. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $X_t = Z_1 cos(ct) + Z_2 sin(ct)$"
+    "#### 2. $X_t = Z_1 cos(ct) + Z_2 sin(ct)$\n",
+    "**Solution:**\n",
+    "\n",
+    "We have $\\mathbb{E}[X_{t}] = \\mathbb{E}[[Z_{1} cos(ct) + Z_{2} sin(ct)]=0$. So mean does not depnend on $t$. Also, \n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\gamma(t, t+h)& =Cov(X_{t}X_{t+h})\\\\\n",
+    "&=\\mathbb{E}[ (Z_{1} cos(ct) + Z_{2} sin(ct))(Z_{1} cos(c(t+h)) + Z_{2} sin(c(t+h)))  ]\\\\\n",
+    "&=\\mathbb{E}[Z_{1}^{2}cos(ct)cos(c(t+h))]+\\mathbb{E}[Z_{1}Z_{2}cos(ct)sin(c(t+h))]+\\mathbb{E}[Z_{1}Z_{2}sin(ct)cos(c(t+h))]+\\mathbb{E}[Z_{2}^{2}sin(ct) sin(c(t+h))  ]\\\\\n",
+    "&=\\mathbb{E}[Z_{1}^{2}cos(ct)cos(c(t+h))]+\\mathbb{E}[Z_{2}^{2}sin(ct) sin(c(t+h))  ]\\\\\n",
+    "&=\\sigma^{2}cos(ch)\n",
+    "\\end{align}\n",
+    "$$\n",
+    "So autocovarinace does not depend on $t$ also. Hence, $X_t$ is stationary. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $X_t = Z_0 cos(ct)$"
+    "#### 3. $X_t = Z_0 cos(ct)$\n",
+    "\n",
+    "**Solution:**\n",
+    "We have $E[X_{t}]=E[ Z_{0} cos(ct)]=0$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $X_t = Z_tZ_{t-1}$\n",
+    "#### 4. $X_t = Z_tZ_{t-1}$\n",
+    "\n",
+    "**Solution:**\n",
     "\n",
     "We have \n",
     "$$\\mathbb{E}[X_{t}]=\\mathbb{E}[ Z_{t}Z_{t-1}]=0$$\n",
@@ -714,8 +753,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $X_t = a + bZ_t + ct$"
+    "#### 5. $X_t = a + bZ_t + ct$\n",
+    "**Solution:**\n",
+    "\n",
+    "We have $\\mathbb{E}(X_t) = a + ct$， which depends on $t$. Hence, $X_t$ is not stationary. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
