--- a/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
+++ b/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
@@ -730,7 +730,19 @@
     "#### 3. $X_t = Z_0 cos(ct)$\n",
     "\n",
     "**Solution:**\n",
-    "We have $E[X_{t}]=E[ Z_{0} cos(ct)]=0$"
+    "We have $E[X_{t}]=E[ Z_{0} cos(ct)]=0$. So mean does not depend on $t$.\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\gamma(t,t+h)&=Cov(X_{t}X_{t+h})\\\\\n",
+    "& =E[ (Z_{0} cos(ct))(Z_{0} cos(c(t+h)))  ]\\\\\n",
+    "& =E[Z_{0}^{2}cos(ct)cos(c(t+h))  ]\\\\\n",
+    "& =E[Z_{0}^{2} cos(\\frac{2ct+ch+ch}{2}cos(\\frac{2ct+ch-ch}{2})  ]\\\\\n",
+    "& =\\frac{\\sigma^{2}}{2}(cos(2ct+ch)+cos(ch))\n",
+    "\\end{align}\n",
+    "$$\n",
+    "Hence, autocovaiance does not depend on $t$ if $c = a\\cdot 2\\pi$, where $a$ is a constant. Under this condition, $X_t$ is stationary. Otherwise, $X_t$ is nonstationary. \n",
+    "\n"
    ]
   },
   {
@@ -758,13 +770,6 @@
     "\n",
     "We have $\\mathbb{E}(X_t) = a + ct$， which depends on $t$. Hence, $X_t$ is not stationary. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
