--- a/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
+++ b/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
@@ -11,38 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.  Pick a stock and download the last 250 trading days (1 year).  Graph the stock price.  Can you calculate the observed auto correlation function? Does there appear to be a trend? How about seasonality?   There is no correct / wrong answer for trend / seasonality. Just look at the data and describe it.\n",
-    "\n",
-    "2. For your stock detrend the data using the following methods. i) Linear regression of price vs time ii) moving average function.   Plot the detrended data\n",
-    "\n",
-    "3. Download retail sales data for the last 10 years.  Remove the seasonality of the data.  After that try to remove inflation but using log of sales vs time in a linear regression.\n",
-    "\n",
-    "4. Stoffer Problem 1.7 : \n",
-    "\n",
-    "    For a moving average process of the form\n",
-    "\n",
-    "    $$x_t = w_{t-1} + 2w_t + w_t$$\n",
-    "\n",
-    "    find the autocorrelatin and autocovariance function\n",
-    "\n",
-    "5. Assume $Z_t$ are iid normal with mean 0 and standard deviation sigma\n",
-    "\n",
-    "    which of the following are stationary\n",
-    "\n",
-    "    $$X_t = a + bZ_t + cZ_{t-1}$$ \n",
-    "\n",
-    "    $$X_t = Z_1 cos(ct) + Z_2 sin(ct)$$\n",
-    "\n",
-    "    $$X_t = Z_0 cos(ct)$$\n",
-    "\n",
-    "    $$X_t = Z_tZ_{t-1}$$\n",
-    "\n",
-    "    $$X_t = a + bZ_t + ct$$"
+    "### **1.  Pick a stock and download the last 250 trading days (1 year).  Graph the stock price.  Can you calculate the observed auto correlation function? Does there appear to be a trend? How about seasonality?   There is no correct / wrong answer for trend / seasonality. Just look at the data and describe it.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +215,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **2. For your stock detrend the data using the following methods. i) Linear regression of price vs time ii) moving average function.   Plot the detrended data**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Detrend Data Using Linear Regression"
    ]
   },
@@ -386,6 +367,13 @@
    ],
    "source": [
     "detrend(y_true, y_ma, x_date, 'detrend stock price using moving average')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **3. Download retail sales data for the last 10 years.  Remove the seasonality of the data.  After that try to remove inflation but using log of sales vs time in a linear regression.**"
    ]
   },
   {
@@ -640,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 4. Stoffer Problem 1.7 : \n",
+    "### **Problem 4. Stoffer Problem 1.7:**\n",
     "\n",
     "For a moving average process of the form\n",
     "\n",
@@ -675,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 5. \n",
+    "### **Problem 5.**\n",
     "Assume $Z_t$ are iid normal with mean 0 and standard deviation sigma\n",
     "\n",
     "which of the following are stationary\n",
