--- a/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
+++ b/HW1-Seasonality-Stability-and-Detrending/HW1.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Homework #1 : Seasonality, Stability and detrending"
+    "## Homework #1 : Seasonality, Stability and detrending\n",
+    "\n",
+    "**Mengheng Xue (mx586)**"
    ]
   },
   {
@@ -16,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +103,7 @@
        "2018-09-21  1915.010010"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
